--- a/my-flyway/pom.xml
+++ b/my-flyway/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>6.0.8</version>
         </dependency>
 
         <dependency>
