--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>my-FactoryBean</module>
         <module>my-flyway</module>
+        <module>my-frame</module>
     </modules>
 
     <properties>
